--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#experiences">Expériences et Formation</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <div class="icons"></div>
+        <div id="icons"></div>
       </nav>
       <div class="main">
         <div class="main-text-container">
