--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href="#contact">Contactez-moi</a>
             </div>
             <div class="button" id="btn2">
-              <a href="#apropos">En savoir plus</a>
+              <a href="./CV professionnel.pdf">CV en PDF</a>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
               <a href="#contact">Contactez-moi</a>
             </div>
             <div class="button" id="btn2">
-              <a href="#competences">En savoir plus</a>
+              <a href="./CV professionnel.pdf">CV en PDF</a>
             </div>
           </div>
         </div>
